refactor(sales): declutter SalesService
- Extract duplicated order-item build loop into buildOrderItem(); unify
  total-duration calc via calculateTotalDuration() (createOrder + updateOrder
  previously computed it via two divergent code paths)
- Replace ~50 inline fully-qualified names with imports
- Make createOrder private (only called by createOrderDTO)
- Index dashboard/calendar raw rows into maps for O(1) day lookups instead
  of per-day linear scans
- Modernize collectors to Stream.toList(); drop dead alias and stale comments

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>